RESOLVED FIXED176774
[GTK][Wayland] Flickering when resizing the window
https://bugs.webkit.org/show_bug.cgi?id=176774
Summary [GTK][Wayland] Flickering when resizing the window
Carlos Garcia Campos
Reported 2017-09-12 02:56:44 PDT
I think this regressed when we switched to always start the wayland compositor. In AcceleratedDrawingAreaProxy::waitForAndDispatchDidUpdateBackingStoreState() we check if the nested compositor is running, which is always true now (if EGL and the required extensions are available). We should check if we are in AC mode instead.
Attachments
Patch (1.99 KB, patch)
2017-09-12 02:59 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-09-12 02:59:07 PDT
Carlos Garcia Campos
Comment 2 2017-09-14 09:43:42 PDT
Note You need to log in before you can comment on or make changes to this bug.